Added humans.txt setting

--- a/akamatsu/templates/akamatsu/dashboard/settings/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/settings/edit.html
@@ -38,6 +38,8 @@
 
     {{ render_field(form.disqus_shortname) }}
 
+    {{ render_field(form.humans) }}
+
     {{ render_field(form.footer_left) }}
     {{ render_field(form.footer_right) }}
 
