Added robots.txt setting

--- a/akamatsu/templates/akamatsu/dashboard/settings/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/settings/edit.html
@@ -39,6 +39,7 @@
     {{ render_field(form.disqus_shortname) }}
 
     {{ render_field(form.humans) }}
+    {{ render_field(form.robots) }}
 
     {{ render_field(form.footer_left) }}
     {{ render_field(form.footer_right) }}
