--- a/akamatsu/templates/akamatsu/layout.html
+++ b/akamatsu/templates/akamatsu/layout.html
@@ -22,6 +22,9 @@
     {# Be responsive #}
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {# humans.txt #}
+    <link type="text/plain" rel="author" href="{{ url_for('misc.humans_txt') }}" />
+
     {# Analytics #}
     {{ analytics }}
 
