--- a/akamatsu/static/css/akamatsu.css
+++ b/akamatsu/static/css/akamatsu.css
@@ -312,6 +312,68 @@ Pages and posts
     font-weight: 600;
 }
 
+.aka-page img,
+.aka-post img {
+    max-width: 100%;
+    cursor: pointer;
+}
+
+/* Image modal */
+#aka-modal {
+    position: fixed;
+    z-index: 101;
+    padding-top: 125px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+#aka-modal-image {
+    margin: auto;
+    display: block;
+    max-width: 90%;
+}
+
+#aka-modal-caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+#aka-modal-close {
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+#aka-modal-close:hover,
+#aka-modal-close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    #aka-modal-image {
+        width: 100%;
+    }
+}
+
 /* Page/Post title */
 .aka-page .title,
 .aka-post .title {
