--- a/akamatsu/templates/akamatsu/dashboard/blog/ghost_index.html
+++ b/akamatsu/templates/akamatsu/dashboard/blog/ghost_index.html
@@ -47,11 +47,13 @@
     <div post_id="{{ post.id }}" class="grid aka-listitem">
         {# Title #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Title</span>
             <span>{{ post.title }}</span>
         </div>
 
         {# Ghosting slug #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Ghost</span>
             <span>{{ post.ghost }}</span>
         </div>
 
@@ -69,6 +71,7 @@
 
         {# Post timestamp #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Date</span>
             <span class="aka-listdate">{{ post.timestamp }}</span>
         </div>
     </div>
