--- a/akamatsu/templates/akamatsu/dashboard/file/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/file/index.html
@@ -33,11 +33,13 @@
     <div file_id="{{ file.id }}" class="grid aka-listitem">
         {# Path #}
         <div class="col-9-12">
+            <span class="aka-list-alt">Path</span>
             <span>{{ file.path }}</span>
         </div>
 
         {# File timestamp #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Date</span>
             <span class="aka-listdate">{{ file.timestamp }}</span>
         </div>
     </div>
