--- a/akamatsu/templates/akamatsu/dashboard/page/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/index.html
@@ -47,11 +47,13 @@
     <div page_id="{{ page.id }}" class="grid aka-listitem">
         {# Title #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Title</span>
             <span>{{ page.title }}</span>
         </div>
 
         {# Page route #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Route</span>
             <span>{{ page.route }}</span>
         </div>
 
@@ -69,6 +71,7 @@
 
         {# Page timestamp #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Date</span>
             <span class="aka-listdate">{{ page.timestamp }}</span>
         </div>
     </div>
