--- a/akamatsu/templates/akamatsu/dashboard/user/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/user/index.html
@@ -45,21 +45,25 @@
     <div user_id="{{ user.id }}" class="grid aka-listitem">
         {# Username #}
         <div class="col-2-12">
+            <span class="aka-list-alt">Username</span>
             <span>{{ user.username }}</span>
         </div>
 
         {# Email #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Email</span>
             <span>{{ user.email }}</span>
         </div>
 
         {# First name #}
         <div class="col-3-12">
+            <span class="aka-list-alt">First name</span>
             <span>{{ user.first_name }}</span>
         </div>
 
         {# Last name #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Last name</span>
             <span>{{ user.last_name }}</span>
         </div>
 
