--- a/akamatsu/templates/akamatsu/dashboard/page/ghost_index.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/ghost_index.html
@@ -47,11 +47,13 @@
     <div page_id="{{ page.id }}" class="grid aka-listitem">
         {# Page route #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Route</span>
             <span>{{ page.route }}</span>
         </div>
 
         {# Ghosting route #}
         <div class="col-4-12">
+            <span class="aka-list-alt">Ghost</span>
             <span>{{ page.ghost }}</span>
         </div>
 
@@ -69,6 +71,7 @@
 
         {# Page timestamp #}
         <div class="col-3-12">
+            <span class="aka-list-alt">Date</span>
             <span class="aka-listdate">{{ page.timestamp }}</span>
         </div>
     </div>
