Added favicon and logo

--- a/akamatsu/templates/akamatsu/layout.html
+++ b/akamatsu/templates/akamatsu/layout.html
@@ -3,6 +3,8 @@
 <head>
 {% block html_head %}
 
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 {# Minified CSS #}
 {% assets "css_pack" %}
     <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}">
