--- a/akamatsu/templates/akamatsu/dashboard/layout.html
+++ b/akamatsu/templates/akamatsu/dashboard/layout.html
@@ -42,7 +42,7 @@
             </a>
         </div>
 
-        {% if current_user.has_role('blogger') or current_user.has_role('admin') %}
+        {% if current_user.has_role('blogger') or current_user.has_role('superblogger') or current_user.has_role('admin') %}
         <div class="col-1-10">
             <a class="aka-db-navlink" href="{{ url_for('dashboard.blog_index') }}">
                 <i class="glyph-chat"></i> Blog
@@ -58,7 +58,7 @@
         </div>
         {% endif %}
 
-        {% if current_user.has_role('admin') or current_user.has_role('uploader') %}
+        {% if current_user.has_role('uploader') or current_user.has_role('superuploader') or current_user.has_role('admin') %}
         <div class="col-1-10">
             <a class="aka-db-navlink" href="{{ url_for('dashboard.file_index') }}">
                 <i class="glyph-attachment"></i> Files
