--- a/akamatsu/templates/akamatsu/dashboard/blog/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/blog/edit.html
@@ -39,7 +39,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.blog_delete', post_id=post_id) }}" class="aka-btn-warning plainlink">
-            <i class="glyph-trash"></i> Delete post
+            <i class="fa fa-trash"></i> Delete post
         </a>
     </div>
 </div>
