--- a/akamatsu/templates/akamatsu/dashboard/file/show.html
+++ b/akamatsu/templates/akamatsu/dashboard/file/show.html
@@ -19,7 +19,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.file_delete', file_id=file.id) }}" class="aka-btn-warning plainlink">
-            <i class="glyph-trash"></i> Delete file
+            <i class="fa fa-trash"></i> Delete file
         </a>
     </div>
 </div>
