--- a/akamatsu/templates/akamatsu/dashboard/profile/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/profile/edit.html
@@ -27,7 +27,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('user.change_password') }}" class="aka-btn-primary plainlink">
-            <i class="glyph-lock-open"></i> Change password
+            <i class="fa fa-unlock-alt"></i> Change password
         </a>
     </div>
 </div>
