--- a/akamatsu/templates/akamatsu/dashboard/user/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/user/edit.html
@@ -36,7 +36,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.user_delete', user_id=user_id) }}" class="aka-btn-warning plainlink">
-            <i class="glyph-trash"></i> Delete user
+            <i class="fa fa-trash"></i> Delete user
         </a>
     </div>
 </div>
