--- a/akamatsu/templates/akamatsu/blog/by.html
+++ b/akamatsu/templates/akamatsu/blog/by.html
@@ -37,12 +37,12 @@
         {% if post.comments_enabled %}
             <a href="{{ url_for('blog.show', slug=post.slug) }}#disqus_thread">
 
-                <i class="glyph-chat"></i>Comments
+                <i class="fa fa-comments"></i>Comments
             </a>
         {% endif %}
 
             <a href="{{ url_for('blog.show', slug=post.slug) }}">
-                <i class="glyph-open-book"></i>Read more
+                <i class="fa fa-newspaper-o"></i>Read more
             </a>
         </div>
 
@@ -58,7 +58,7 @@
 {% if posts.has_prev %}
     <div class="col-1-3 mobile-col-1-2">
         <a id="aka-prevpage" href="{{ url_for('blog.by_user', user=user, page=posts.prev_num) }}">
-            <i class="glyph-chevron-left"></i> Newer posts
+            <i class="fa fa-chevron-left"></i> Newer posts
         </a>
     </div>
 {% endif %}
@@ -66,7 +66,7 @@
 {% if posts.has_next %}
     <div class="col-1-3 mobile-col-1-2 push-right">
         <a id="aka-nextpage" href="{{ url_for('blog.by_user', user=user, page=posts.next_num) }}">
-            Older posts <i class="glyph-chevron-right"></i>
+            Older posts <i class="fa fa-chevron-right"></i>
         </a>
     </div>
 {% endif %}
