--- a/akamatsu/templates/akamatsu/dashboard/blog/ghost_index.html
+++ b/akamatsu/templates/akamatsu/dashboard/blog/ghost_index.html
@@ -11,13 +11,13 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.blog_index') }}" class="aka-db-action">
-            <i class="glyph-eye"></i> View normal posts
+            <i class="fa fa-eye"></i> View normal posts
         </a>
     </div>
 
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.blog_create') }}" class="aka-db-action">
-            <i class="glyph-plus"></i> Create new post
+            <i class="fa fa-plus"></i> Create new post
         </a>
     </div>
 </div>
@@ -62,9 +62,9 @@
             <span class="aka-listicon-alt">Published:</span>
             <span class="aka-listicon">
                 {% if post.is_published %}
-                <i class="glyph-check"></i>
+                <i class="fa fa-check"></i>
                 {% else %}
-                <i class="glyph-cross"></i>
+                <i class="fa fa-times"></i>
                 {% endif %}
             </span>
         </div>
@@ -82,7 +82,7 @@
 {% if posts.has_prev %}
     <div class="col-1-3 mobile-col-1-2">
         <a id="aka-prevpage" href="{{ url_for('dashboard.blog_ghost_index', page=posts.prev_num) }}">
-            <i class="glyph-chevron-left"></i> Newer posts
+            <i class="fa fa-chevron-left"></i> Newer posts
         </a>
     </div>
 {% endif %}
@@ -90,7 +90,7 @@
 {% if posts.has_next %}
     <div class="col-1-3 mobile-col-1-2 push-right">
         <a id="aka-nextpage" href="{{ url_for('dashboard.blog_ghost_index', page=posts.next_num) }}">
-            Older posts <i class="glyph-chevron-right"></i>
+            Older posts <i class="fa fa-chevron-right"></i>
         </a>
     </div>
 {% endif %}
