--- a/akamatsu/templates/akamatsu/dashboard/file/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/file/index.html
@@ -11,7 +11,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.file_upload') }}" class="aka-db-action">
-            <i class="glyph-publish"></i> Upload a file
+            <i class="fa fa-upload"></i> Upload a file
         </a>
     </div>
 </div>
@@ -50,7 +50,7 @@
 {% if files.has_prev %}
     <div class="col-1-3 mobile-col-1-2">
         <a id="aka-prevpage" href="{{ url_for('dashboard.file_index', page=files.prev_num) }}">
-            <i class="glyph-chevron-left"></i> Newer files
+            <i class="fa fa-chevron-left"></i> Newer files
         </a>
     </div>
 {% endif %}
@@ -58,7 +58,7 @@
 {% if files.has_next %}
     <div class="col-1-3 mobile-col-1-2 push-right">
         <a id="aka-nextpage" href="{{ url_for('dashboard.file_index', page=files.next_num) }}">
-            Older files <i class="glyph-chevron-right"></i>
+            Older files <i class="fa fa-chevron-right"></i>
         </a>
     </div>
 {% endif %}
