--- a/akamatsu/templates/akamatsu/dashboard/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/index.html
@@ -8,7 +8,7 @@
 {% if current_user.has_role('blogger') or current_user.has_role('superblogger') or current_user.has_role('admin') %}
 <div class="grid grid-pad">
     <div class="col-1-1 aka-db-task">
-        <a href="{{ url_for('dashboard.blog_create') }}"><i class="glyph-message"></i> New post</a>
+        <a href="{{ url_for('dashboard.blog_create') }}"><i class="fa fa-comment"></i> New post</a>
     </div>
 </div>
 {% endif %}
@@ -16,7 +16,7 @@
 {% if current_user.has_role('editor') or current_user.has_role('admin') %}
 <div class="grid grid-pad">
     <div class="col-1-1 aka-db-task">
-        <a href="{{ url_for('dashboard.page_create') }}"><i class="glyph-text-document-inverted"></i> New page</a>
+        <a href="{{ url_for('dashboard.page_create') }}"><i class="fa fa-file-o"></i> New page</a>
     </div>
 </div>
 {% endif %}
@@ -24,14 +24,14 @@
 {% if current_user.has_role('uploader') or current_user.has_role('superuploader') or current_user.has_role('admin') %}
 <div class="grid grid-pad">
     <div class="col-1-1 aka-db-task">
-        <a href="{{ url_for('dashboard.file_upload') }}"><i class="glyph-publish"></i> Upload file</a>
+        <a href="{{ url_for('dashboard.file_upload') }}"><i class="fa fa-upload"></i> Upload file</a>
     </div>
 </div>
 {% endif %}
 
 <div class="grid grid-pad">
     <div class="col-1-1 aka-db-task">
-        <a href="{{ url_for('dashboard.profile_edit') }}"><i class="glyph-man"></i> Edit my profile</a>
+        <a href="{{ url_for('dashboard.profile_edit') }}"><i class="fa fa-user"></i> Edit my profile</a>
     </div>
 </div>
 {% endblock %}
