--- a/akamatsu/templates/akamatsu/dashboard/page/edit.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/edit.html
@@ -39,7 +39,7 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.page_delete', page_id=page_id) }}" class="aka-btn-warning plainlink">
-            <i class="glyph-trash"></i> Delete page
+            <i class="fa fa-trash"></i> Delete page
         </a>
     </div>
 </div>
