--- a/akamatsu/templates/akamatsu/dashboard/page/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/index.html
@@ -11,13 +11,13 @@
 <div class="grid grid-pad">
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.page_ghost_index') }}" class="aka-db-action">
-            <i class="glyph-eye-with-line"></i> View ghost pages
+            <i class="fa fa-eye-slash"></i> View ghost pages
         </a>
     </div>
 
     <div class="col-2-12 push-right">
         <a href="{{ url_for('dashboard.page_create') }}" class="aka-db-action">
-            <i class="glyph-plus"></i> Create new page
+            <i class="fa fa-plus"></i> Create new page
         </a>
     </div>
 </div>
@@ -62,9 +62,9 @@
             <span class="aka-listicon-alt">Published:</span>
             <span class="aka-listicon">
                 {% if page.is_published %}
-                <i class="glyph-check"></i>
+                <i class="fa fa-check"></i>
                 {% else %}
-                <i class="glyph-cross"></i>
+                <i class="fa fa-times"></i>
                 {% endif %}
             </span>
         </div>
@@ -82,7 +82,7 @@
 {% if pages.has_prev %}
     <div class="col-1-3 mobile-col-1-2">
         <a id="aka-prevpage" href="{{ url_for('dashboard.page_index', page=pages.prev_num) }}">
-            <i class="glyph-chevron-left"></i> Newer pages
+            <i class="fa fa-chevron-left"></i> Newer pages
         </a>
     </div>
 {% endif %}
@@ -90,7 +90,7 @@
 {% if pages.has_next %}
     <div class="col-1-3 mobile-col-1-2 push-right">
         <a id="aka-nextpage" href="{{ url_for('dashboard.page_index', page=pages.next_num) }}">
-            Older pages <i class="glyph-chevron-right"></i>
+            Older pages <i class="fa fa-chevron-right"></i>
         </a>
     </div>
 {% endif %}
