Added "Last updated" date to page view, changed format of dates to DD MMM YYYY

--- a/akamatsu/templates/akamatsu/blog/index.html
+++ b/akamatsu/templates/akamatsu/blog/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <span class="date">
-            {{ post.timestamp.strftime('%b %d, %Y') }}
+            {{ post.timestamp.strftime('%d %b %Y') }}
         </span>
 
         <div class="content">
