--- a/akamatsu/templates/akamatsu/blog/show.html
+++ b/akamatsu/templates/akamatsu/blog/show.html
@@ -18,7 +18,7 @@
         </div>
 
         <span class="date">
-            {{ post.timestamp.strftime('%b %d, %Y') }}
+            {{ post.timestamp.strftime('%d %b %Y') }}
         </span>
 
         <div class="content">
