Use markdown filter for page html, minor enhancements to forms

--- a/akamatsu/templates/akamatsu/page/show.html
+++ b/akamatsu/templates/akamatsu/page/show.html
@@ -1,48 +1,21 @@
 {% extends "akamatsu/layout.html" %}
 {% from "akamatsu/_macros.html" import disqus_comments %}
 
-{% block html_head %}
-{# Check custom head #}
-{% if page.is_html and page.custom_head %}
-    {{ page.head_as_html() }}
-
-{% else %}
-    {{ super() }}
-{% endif %}
-
-{% endblock %}
+{# Custom head extensions #}
+{% block head_extend %}{{ page.custom_head|safe }}{% endblock %}
 
 {% block title %}{{ page.title }}{% endblock %}
 {% block mini %}.{{ page.mini }}{% endblock %}
 
-{# To show or not to show the default header #}
-{% block akamatsu_header %}
-{% if page.is_html %}
-    {% if page.use_layout_header %}
-        {{ super() }}
-    {% endif %}
-{% else %}
-    {{ super() }}
-{% endif %}
-{% endblock %}
-
-{% block html_body %}
-
-{% if page.is_html %}
-{# Output html #}
-{{ page.content_as_html() }}
-
-{% else %}
-{{ super () }}
-{% endif %}
-{% endblock %}
-
 {% block content %}
-{% if not page.is_html %}
-{# Output markdown #}
 <div class="grid grid-pad">
     <article class="aka-page col-1-1">
         {{ page.content|markdown }}
+
+        <span class="date">
+            <i>Last updated: </i>
+            {{ page.timestamp.strftime('%d %b %Y') }}
+        </span>
 
         {% if page.comments_enabled %}
             {{ disqus_comments(
@@ -52,12 +25,6 @@
                 )
             }}
         {% endif %}
-
-        <span class="date">
-            <i>Last updated: </i>
-            {{ page.timestamp.strftime('%d %b %Y') }}
-        </span>
     </article>
 </div>
-{% endif %}
 {% endblock %}
