--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -122,6 +122,39 @@
            >
 {% endmacro %}
 
+{% macro render_pagination(pagination, endpoint, admin=false) %}
+    {% if pagination.pages > 1 %}
+    <div class="grid">
+        <div id="aka-pagination" {% if admin %}class="admin"{% endif %}>
+            {% if pagination.has_prev %}
+                <a href="{{ url_for(endpoint, page=pagination.prev_num) }}">
+                    <i class="fa fa-chevron-left"></i>
+                </a>
+            {% endif %}
+
+        {%- for page in pagination.iter_pages() %}
+            {% if page %}
+                {% if page != pagination.page %}
+                    <a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a>
+                {% else %}
+                    <span class="current">{{ page }}</span>
+                {% endif %}
+            {% else %}
+                <span class=ellipsis>…</span>
+            {% endif %}
+        {%- endfor %}
+
+        {% if pagination.has_next %}
+            <a href="{{ url_for(endpoint, page=pagination.next_num) }}">
+                <i class="fa fa-chevron-right"></i>
+            </a>
+        {% endif %}
+        </div>
+    </div>
+    {% endif %}
+{% endmacro %}
+
+
 {# Dashboard sortable headers #}
 {% macro sortable_header(key, text, order_key='date', order_dir='desc') %}
     {% if key == order_key %}
