--- a/akamatsu/templates/akamatsu/blog/index.html
+++ b/akamatsu/templates/akamatsu/blog/index.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/layout.html" %}
-{% from "akamatsu/_macros.html" import get_summary, show_author, show_tags %}
+{% from "akamatsu/_macros.html" import get_summary, show_author, show_tags, render_pagination %}
 
 {% block title %}Blog index{% endblock %}
 
@@ -54,23 +54,7 @@
 
 {% endfor %}
 
-<div class="grid grid-pad">
-{% if posts.has_prev %}
-    <div class="col-1-3 mobile-col-1-2">
-        <a id="aka-prevpage" href="{{ url_for('blog.index', page=posts.prev_num) }}">
-            <i class="fa fa-chevron-left"></i> Newer posts
-        </a>
-    </div>
-{% endif %}
-
-{% if posts.has_next %}
-    <div class="col-1-3 mobile-col-1-2 push-right">
-        <a id="aka-nextpage" href="{{ url_for('blog.index', page=posts.next_num) }}">
-            Older posts <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-{% endif %}
-</div>
+{{ render_pagination(posts, 'blog.index') }}
 
 {% else %}
     {# Show error message instead of 404 #}
