--- a/akamatsu/templates/akamatsu/blog/tagged.html
+++ b/akamatsu/templates/akamatsu/blog/tagged.html
@@ -53,23 +53,8 @@
 </div>
 
 {% endfor %}
-<div class="grid grid-pad">
-{% if posts.has_prev %}
-    <div class="col-1-3 mobile-col-1-2">
-        <a id="aka-prevpage" href="{{ url_for('blog.tagged', tag=tag, page=posts.prev_num) }}">
-            <i class="fa fa-chevron-left"></i> Newer posts
-        </a>
-    </div>
-{% endif %}
 
-{% if posts.has_next %}
-    <div class="col-1-3 mobile-col-1-2 push-right">
-        <a id="aka-nextpage" href="{{ url_for('blog.tagged', tag=tag, page=posts.next_num) }}">
-            Older posts <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-{% endif %}
-</div>
+{{ render_pagination(posts, 'blog.tagged') }}
 
 {% else %}
     {# Show error message instead of 404 #}
