--- a/akamatsu/templates/akamatsu/dashboard/blog/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/blog/index.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/dashboard/layout.html" %}
-{% from "akamatsu/_macros.html" import sortable_header %}
+{% from "akamatsu/_macros.html" import render_pagination, sortable_header %}
 
 {% block title %}Post list{% endblock %}
 {% block mini %}.blog{% endblock %}
@@ -94,23 +94,7 @@
 {% endfor %}
 </div>
 
-<div class="grid grid-pad">
-{% if posts.has_prev %}
-    <div class="col-1-3 mobile-col-1-2">
-        <a id="aka-prevpage" href="{{ url_for('dashboard.blog_index', page=posts.prev_num) }}">
-            <i class="fa fa-chevron-left"></i> Newer posts
-        </a>
-    </div>
-{% endif %}
-
-{% if posts.has_next %}
-    <div class="col-1-3 mobile-col-1-2 push-right">
-        <a id="aka-nextpage" href="{{ url_for('dashboard.blog_index', page=posts.next_num) }}">
-            Older posts <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-{% endif %}
-</div>
+{{ render_pagination(posts, 'dashboard.blog_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
