--- a/akamatsu/templates/akamatsu/dashboard/page/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/index.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/dashboard/layout.html" %}
-{% from "akamatsu/_macros.html" import sortable_header %}
+{% from "akamatsu/_macros.html" import render_pagination, sortable_header %}
 
 {% block title %}Page list{% endblock %}
 {% block mini %}.pages{% endblock %}
@@ -78,23 +78,7 @@
 {% endfor %}
 </div>
 
-<div class="grid grid-pad">
-{% if pages.has_prev %}
-    <div class="col-1-3 mobile-col-1-2">
-        <a id="aka-prevpage" href="{{ url_for('dashboard.page_index', page=pages.prev_num) }}">
-            <i class="fa fa-chevron-left"></i> Newer pages
-        </a>
-    </div>
-{% endif %}
-
-{% if pages.has_next %}
-    <div class="col-1-3 mobile-col-1-2 push-right">
-        <a id="aka-nextpage" href="{{ url_for('dashboard.page_index', page=pages.next_num) }}">
-            Older pages <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-{% endif %}
-</div>
+{{ render_pagination(posts, 'dashboard.page_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
