--- a/akamatsu/templates/akamatsu/dashboard/user/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/user/index.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/dashboard/layout.html" %}
-{% from "akamatsu/_macros.html" import sortable_header %}
+{% from "akamatsu/_macros.html" import render_pagination, sortable_header %}
 
 {% block title %}User list{% endblock %}
 {% block mini %}.users{% endblock %}
@@ -82,23 +82,7 @@
 {% endfor %}
 </div>
 
-<div class="grid grid-pad">
-{% if users.has_prev %}
-    <div class="col-1-3 mobile-col-1-2">
-        <a id="aka-prevpage" href="{{ url_for('dashboard.user_index', page=users.prev_num) }}">
-            <i class="fa fa-chevron-left"></i> Next page
-        </a>
-    </div>
-{% endif %}
-
-{% if users.has_next %}
-    <div class="col-1-3 mobile-col-1-2 push-right">
-        <a id="aka-nextpage" href="{{ url_for('dashboard.user_index', page=users.next_num) }}">
-            Previous page <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-{% endif %}
-</div>
+{{ render_pagination(posts, 'dashboard.user_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
