Added missing macro in blog templates

--- a/akamatsu/templates/akamatsu/blog/tagged.html
+++ b/akamatsu/templates/akamatsu/blog/tagged.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/layout.html" %}
-{% from "akamatsu/_macros.html" import get_summary, show_author, show_tags %}
+{% from "akamatsu/_macros.html" import get_summary, show_author, show_tags, render_pagination %}
 
 {% block title %}Posts tagged '{{ tag }}' {% endblock %}
 
