Fix incorrect variable in dashboard templates

--- a/akamatsu/templates/akamatsu/dashboard/file/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/file/index.html
@@ -46,7 +46,7 @@
 {% endfor %}
 </div>
 
-{{ render_pagination(posts, 'dashboard.file_index', true) }}
+{{ render_pagination(files, 'dashboard.file_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
