--- a/akamatsu/templates/akamatsu/dashboard/page/ghost_index.html
+++ b/akamatsu/templates/akamatsu/dashboard/page/ghost_index.html
@@ -78,7 +78,7 @@
 {% endfor %}
 </div>
 
-{{ render_pagination(posts, 'dashboard.page_ghost_index', true) }}
+{{ render_pagination(pages, 'dashboard.page_ghost_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
