--- a/akamatsu/templates/akamatsu/dashboard/user/index.html
+++ b/akamatsu/templates/akamatsu/dashboard/user/index.html
@@ -82,7 +82,7 @@
 {% endfor %}
 </div>
 
-{{ render_pagination(posts, 'dashboard.user_index', true) }}
+{{ render_pagination(users, 'dashboard.user_index', true) }}
 
 {% else %}
     {# Show error message instead of 404 #}
