--- a/akamatsu/templates/akamatsu/dashboard/file/show.html
+++ b/akamatsu/templates/akamatsu/dashboard/file/show.html
@@ -1,5 +1,5 @@
 {% extends "akamatsu/dashboard/layout.html" %}
-{% from "akamatsu/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
+{% from "akamatsu/_macros.html" import render_field, render_checkbox_field, render_submit_field, render_warning_msg %}
 
 {% block title %}File details{% endblock %}
 {% block mini %}.files{% endblock %}
@@ -8,11 +8,7 @@
 {% block content %}
 
 {% if status == 'error' %}
-<div class="grid grid-pad">
-    <div class="col-1-1 aka-msg-warning">
-        <span>{{ errmsg }}</span>
-    </div>
-</div>
+    {{ render_warning_msg(errmsg) }}
 {% else %}
 
 {# Delete button #}
