--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -127,7 +127,7 @@
     <div class="grid">
         <div id="aka-pagination" {% if admin %}class="admin"{% endif %}>
             {% if pagination.has_prev %}
-                <a href="{{ url_for(endpoint, page=pagination.prev_num) }}">
+                <a href="{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}">
                     <i class="fa fa-chevron-left"></i>
                 </a>
             {% endif %}
@@ -135,7 +135,7 @@
         {%- for page in pagination.iter_pages() %}
             {% if page %}
                 {% if page != pagination.page %}
-                    <a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a>
+                    <a href="{{ url_for(endpoint, page=page, **kwargs) }}">{{ page }}</a>
                 {% else %}
                     <span class="current">{{ page }}</span>
                 {% endif %}
@@ -145,7 +145,7 @@
         {%- endfor %}
 
         {% if pagination.has_next %}
-            <a href="{{ url_for(endpoint, page=pagination.next_num) }}">
+            <a href="{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}">
                 <i class="fa fa-chevron-right"></i>
             </a>
         {% endif %}
